VeraSandBox2016/src/objects/Funding_Allocation__c.object
<CustomObject>
    <fields>
        <fullName>Allocation_Details__c</fullName>
        <inlineHelpText>Description of what the allocation funds</inlineHelpText>
        <label>Allocation Details</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Amount_EUR__c</fullName>
        <label>Amount EUR</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Core__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Core</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Funding__c</fullName>
        <label>Funding</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Funding Allocations</relationshipLabel>
        <relationshipName>Funding_Allocations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Mission__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Mission</label>
        <referenceTo>Mission__c</referenceTo>
        <relationshipLabel>Funding Allocations</relationshipLabel>
        <relationshipName>Funding_Allocations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Training__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Training</label>
        <referenceTo>Training__c</referenceTo>
        <relationshipLabel>Funding Allocations</relationshipLabel>
        <relationshipName>Funding_Allocations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>of_Funding__c</fullName>
        <description>Percentage of total Funding Amount that this Allocation amount covers</description>
        <formula>Amount_EUR__c / Funding__r.Equivalent_in_EUR__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% of Funding</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <label>Funding Allocation</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ALL-{00000}</displayFormat>
        <label>JRRID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Funding Allocations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Either_Core_Training_or_Mission</fullName>
        <active>true</active>
        <description>Validation rule for either CORE checked or TRAINING filled out or MISSION filled out (can only be one)</description>
        <errorConditionFormula>OR( 
  OR( 
   NOT(Core__c), 
   ISBLANK( Mission__c ),
   ISBLANK( Training__c )
  ), 
  AND( 
   Core__c, 
   NOT(ISBLANK( Mission__c )),
   NOT(ISBLANK( Training__c )) 
  ) 
)</errorConditionFormula>
        <errorDisplayField>Core__c</errorDisplayField>
        <errorMessage>Funding must be allocated to Core or a Training or a Mission.</errorMessage>
    </validationRules>
</CustomObject>